[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/ui/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://shared/fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://shared/fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
script = ExtResource( 1 )

[node name="Resume" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Label" type="Label" parent="Resume"]
margin_left = -159.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
align = 1
valign = 1

[node name="LabelBold" type="Label" parent="Resume"]
visible = false
margin_left = -160.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
align = 1
valign = 1

[node name="Restart" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Label" type="Label" parent="Restart"]
margin_left = -159.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Restart"
align = 1
valign = 1

[node name="LabelBold" type="Label" parent="Restart"]
visible = false
margin_left = -159.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
align = 1
valign = 1

[node name="GiveUp" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Label" type="Label" parent="GiveUp"]
margin_left = -159.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Give Up"
align = 1
valign = 1

[node name="LabelBold" type="Label" parent="GiveUp"]
visible = false
margin_left = -159.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Give Up"
align = 1
valign = 1

[node name="Mute" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Label" type="Label" parent="Mute"]
margin_left = -159.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Mute"
align = 1
valign = 1

[node name="LabelBold" type="Label" parent="Mute"]
visible = false
margin_left = -160.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Mute"
align = 1
valign = 1

[node name="ExitToMenu" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Label" type="Label" parent="ExitToMenu"]
margin_left = -159.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Exit to Menu"
align = 1
valign = 1

[node name="LabelBold" type="Label" parent="ExitToMenu"]
visible = false
margin_left = -158.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Exit to Menu"
align = 1
valign = 1

[node name="Quit" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Label" type="Label" parent="Quit"]
margin_left = -159.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1
valign = 1

[node name="LabelBold" type="Label" parent="Quit"]
visible = false
margin_left = -159.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
valign = 1
